Adding Game structure